# gns-browser-tauri

./: .gitignore  Cargo.toml  nixpacks.toml  package-lock.json  pnpm-lock.yaml  railway.toml
.github/workflows/: build.yml  deploy-wasm.yml  nightly.yml  pr-check.yml
apps/desktop/: package.json
apps/desktop/src/: App.tsx
apps/desktop/src-legacy/: App.tsx  index.css
apps/desktop/src-legacy/components/: BreadcrumbsTab.tsx  ConversationScreen.tsx  HandleClaimScreen.tsx  IdentityViewer.tsx  LoadingScreen.tsx  MainLayout.tsx  MessagesTab.tsx  NewConversation.tsx  SettingsTab.tsx  SwipeableItem.tsx  WelcomeScreen.tsx
apps/desktop/src-legacy/components/dix/: PostCard.tsx
apps/desktop/src-legacy/components/email/: EmailTab.tsx
apps/desktop/src-legacy/components/gsite/: BusinessGSiteView.tsx  GSiteActionBar.tsx  GSiteCreator.tsx  GSiteHeader.tsx  GSiteViewer.tsx  PersonGSiteView.tsx  TrajectorySection.tsx  TrustBadge.tsx  index.ts
apps/desktop/src-legacy/components/messaging/: MessageBubble.tsx  ThreadListScreen.tsx
apps/desktop/src-legacy/components/settings/: AvatarPicker.tsx  FacetEditor.tsx  FacetList.tsx  LinkEditor.tsx  ThemeToggle.tsx  index.ts
apps/desktop/src-legacy/components/wallet/: GnsTokenScreen.tsx  PaymentHistoryScreen.tsx  SendMoneyScreen.tsx  WalletCard.tsx  index.ts
apps/desktop/src-legacy/hooks/: useBreadcrumbCollection.ts  useDebounce.ts  useStellar.ts
apps/desktop/src-legacy/lib/: adapter.ts  dix.ts  gsite.ts  trajectory.ts
apps/desktop/src-legacy/pages/: DixTimeline.tsx  PostDetailPage.tsx
apps/desktop/src-legacy/types/: dix.ts  gsite.ts  profile.ts  trajectory.ts
apps/desktop/src-tauri/: tauri.conf.json
apps/desktop/src-tauri/src/: main.rs  message_handler.rs
apps/desktop/src-tauri/src/network/: mod.rs
apps/desktop/src-tauri/src/storage/: mod.rs
apps/desktop/src/components/: BrowserPairingScreen.tsx  HomeTab.tsx
apps/desktop/src/components/messaging/: MessageBubble.tsx  MessageContextMenu.tsx  ReplyPreview.tsx  ThreadListScreen.tsx
apps/desktop/src/lib/: adapter.ts  profile.ts
apps/web/: index.html  nixpacks.toml  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.jsx
apps/web/src/components/: EmailView.jsx
apps/web/src/components/modals/: index.jsx  (+2 more)
apps/web/src/context/: AuthContext.jsx  ThemeContext.jsx
apps/web/src/hooks/: usePlatform.ts  useStudioState.jsx
apps/web/src/lib/: adapter.ts
apps/web/src/native/: storage.ts
crates/gns-crypto-core/: Cargo.toml
crates/gns-crypto-core/src/: breadcrumb.rs  encryption.rs  envelope.rs  identity.rs  lib.rs  signing.rs
crates/gns-crypto-wasm/src/: lib.rs
panthera-browser/: README.md  package-lock.json  package.json  tailwind.config.js
panthera-browser/public/: index.html
panthera-browser/src/: App.js  auth.js  crypto.js  gnsApi.js  index.css  index.js  messaging.js  websocket.js
panthera-browser/src/components/: GSiteEditor.jsx  QRLogin.jsx  StudioDashboard.jsx
panthera-browser/src/components/blocks/: BlockPicker.jsx
panthera-browser/src/components/studio/: index.js
panthera-browser/src/components/views/: BrowserViews.js
server/src/api/: auth_sessions.ts  dix.ts
server/src/lib/: db.ts
server/src/services/: echo_bot.ts
src-tauri/: Cargo.toml  Info.iOS.plist  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  message_handler.rs
src-tauri/src/commands/: breadcrumbs.rs  handles.rs  identity.rs  messaging.rs  mod.rs  network.rs  utils.rs
src-tauri/src/crypto/: mod.rs
src-tauri/src/location/: mod.rs
src-tauri/src/network/: mod.rs
src-tauri/src/storage/: mod.rs
ui/: package-lock.json  package.json
ui/src/: App.tsx
ui/src/components/: BrowserPairingScreen.tsx  ConversationScreen.tsx  HomeTab.tsx  NewConversation.tsx  SettingsTab.tsx  WelcomeScreen.tsx
ui/src/components/email/: EmailList.tsx  EmailMessageCard.tsx  EmailSidebar.tsx  EmailTab.tsx  EmailThread.tsx
ui/src/lib/: dix.ts  email.ts  tauri.ts
ui/src/types/: email.ts
(+11 files in other folders)
