[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/gns-crypto-core",
    "crates/gns-crypto-wasm",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "BSL-1.1"
authors = ["GNS Team <dev@gcrumbs.com>"]
repository = "https://github.com/gcrumbs/gns-browser"

[workspace.dependencies]
# Shared dependencies across workspace
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
hex = "0.4"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }
tracing = "0.1"

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
