[package]
name = "gns-browser"
version = "1.0.0"
description = "GNS Browser - The Identity Web Browser"
authors = ["GNS Team <dev@gcrumbs.com>"]
license = "BSL-1.1"
repository = "https://github.com/gcrumbs/gns-browser"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-http = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-dialog = "2.0"

# Our crypto core
gns-crypto-core = { path = "../crates/gns-crypto-core" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP & WebSocket
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures = "0.3"
futures-util = "0.3"

# Database
rusqlite = { version = "0.30", features = ["bundled"] }

# Secure storage
keyring = "3.6"

# Utilities
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
base64 = "0.21"
thiserror = "1.0"
anyhow = "1.0"
open = "5.0"
dirs = "5.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(target_os = "ios")'.dependencies]
# iOS-specific plugins
tauri-plugin-geolocation = "2.0"

[target.'cfg(target_os = "android")'.dependencies]
# Android-specific plugins  
tauri-plugin-geolocation = "2.0"

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
# Desktop doesn't need geolocation by default

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
