[package]
name = "gns-crypto-core"
version = "1.0.0"
edition = "2021"
description = "GNS cryptographic primitives - the single source of truth"
license = "BSL-1.1"
authors = ["GNS Team <dev@gcrumbs.com>"]

[features]
default = []
# Enable for WASM compatibility (disables some OS-specific features)
wasm = ["getrandom", "uuid/js"]

[dependencies]
# Cryptography - audited, production-ready
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
x25519-dalek = { version = "2.0", features = ["serde", "static_secrets"] }
chacha20poly1305 = "0.10"
blake3 = "1.5"
sha2 = "0.10"
hkdf = "0.12"
hmac = "0.12"

# Randomness
rand = "=0.9.2"
rand_core = "0.6"
getrandom = { version = "0.2", features = ["js"], optional = true }

# Secure memory
zeroize = { version = "1.7", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Encoding
hex = "0.4"
base64 = "0.21"
bs58 = "0.5"

# Utilities
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.35", features = ["rt", "macros"] }
